Fixed z-index

--- a/assets/styles/loading-box.less
+++ b/assets/styles/loading-box.less
@@ -17,6 +17,7 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0,0,0,0.75);
+  z-index: 100;
 
   & .loading-text-box {
     display: inline-block;
@@ -29,5 +30,6 @@
     top: 25%;
     left: 0;
     right: 0;
+    z-index: 101;
   }
 }
